tests/xml/invalidxml/version/badver1.xml.README
badver1.xml: BAD version must be 2016
